--- a/game-fisa/src/App.css
+++ b/game-fisa/src/App.css
@@ -40,3 +40,49 @@
 .read-the-docs {
   color: #888;
 } */
+
+{
+  "id": 4,
+  "name": "Action",
+  "slug": "action",
+  "games_count": 172785,
+  "image_background": "https://media.rawg.io/media/games/b7b/b7b8381707152afc7d91f5d95de70e39.jpg",
+  "games": [
+      {
+          "id": 3498,
+          "slug": "grand-theft-auto-v",
+          "name": "Grand Theft Auto V",
+          "added": 19449
+      },
+      {
+          "id": 3328,
+          "slug": "the-witcher-3-wild-hunt",
+          "name": "The Witcher 3: Wild Hunt",
+          "added": 18632
+      },
+      {
+          "id": 5286,
+          "slug": "tomb-raider",
+          "name": "Tomb Raider (2013)",
+          "added": 15329
+      },
+      {
+          "id": 4291,
+          "slug": "counter-strike-global-offensive",
+          "name": "Counter-Strike: Global Offensive",
+          "added": 15217
+      },
+      {
+          "id": 12020,
+          "slug": "left-4-dead-2",
+          "name": "Left 4 Dead 2",
+          "added": 14858
+      },
+      {
+          "id": 5679,
+          "slug": "the-elder-scrolls-v-skyrim",
+          "name": "The Elder Scrolls V: Skyrim",
+          "added": 14695
+      }
+  ]
+}
